--- a/certificates.html
+++ b/certificates.html
@@ -458,7 +458,7 @@
         <!-- Certificate 1: RedKross -->
         <article class="cert-card fade-up" id="redkross">
             <div class="cert-header">
-                <img src="{{ url_for('static', filename='Logo/Redkross-Research-Foundation-Logo.png') }}"
+                <img src="static/Logo/Redkross-Research-Foundation-Logo.png"
                      alt="RedKross Logo"
                      class="cert-logo">
                 <div class="cert-title-area">
@@ -481,13 +481,13 @@
 
             <div class="cert-preview">
                 <div class="cert-preview-img" onclick="openModal('redkross')">
-                    <img src="{{ url_for('static', filename='Certificate_images/Gemini_Generated_Image_pz42gnpz42gnpz42.png') }}"
+                    <img src=""
                          alt="RedKross Certificate">
                 </div>
             </div>
 
             <div class="cert-actions">
-                <a href="{{ url_for('static', filename='Certificate_images/Gemini_Generated_Image_pz42gnpz42gnpz42.png') }}"
+                <a href=""
                    class="cert-btn"
                    download>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
@@ -503,7 +503,7 @@
         <!-- Certificate 2: Function in Python -->
         <article class="cert-card fade-up" id="certificate2">
             <div class="cert-header">
-                <img src="{{ url_for('static', filename='Logo/Great-Learning-Logo.png') }}"
+                <img src="static/Logo/Great-Learning-Logo.png"
                      alt="Great Learning Logo"
                      class="cert-logo">
                 <div class="cert-title-area">
@@ -522,13 +522,13 @@
 
             <div class="cert-preview">
                 <div class="cert-preview-img" onclick="openModal('certificate2')">
-                    <img src="{{ url_for('static', filename='Certificate_images/Function-in-Python.jpg') }}"
+                    <img src="static/Certificate_images/Function-in-Python.jpg"
                          alt="Function in Python Certificate">
                 </div>
             </div>
 
             <div class="cert-actions">
-                <a href="{{ url_for('static', filename='Certificate_pdf/Function-in-Python.pdf') }}"
+                <a href="static/Certificate_pdf/Function-in-Python.pdf"
                    class="cert-btn"
                    download>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
@@ -544,7 +544,7 @@
         <!-- Certificate 3: Introduction of R -->
         <article class="cert-card fade-up" id="certificate3">
             <div class="cert-header">
-                <img src="{{ url_for('static', filename='Logo/Great-Learning-Logo.png') }}"
+                <img src="static/Logo/Great-Learning-Logo.png"
                      alt="Great Learning Logo"
                      class="cert-logo">
                 <div class="cert-title-area">
@@ -563,13 +563,13 @@
 
             <div class="cert-preview">
                 <div class="cert-preview-img" onclick="openModal('certificate3')">
-                    <img src="{{ url_for('static', filename='Certificate_images/Introduction-of-R.jpg') }}"
+                    <img src="static/Certificate_images/Introduction-of-R.jpg"
                          alt="Introduction of R Certificate">
                 </div>
             </div>
 
             <div class="cert-actions">
-                <a href="{{ url_for('static', filename='Certificate_pdf/Introduction-of-R.pdf') }}"
+                <a href="static/Certificate_pdf/Introduction-of-R.pdf"
                    class="cert-btn"
                    download>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
