--- a/resume.html
+++ b/resume.html
@@ -307,7 +307,7 @@
     <div class="resume-container">
 
         <!-- Back Link -->
-        <a href="/" class="back-link">Back to Portfolio</a>
+        <a href="index.html" class="back-link">Back to Portfolio</a>
 
         <!-- Header -->
         <div class="resume-header">
@@ -469,5 +469,6 @@ console.log('Resume page loaded successfully');
 
 </body>
 </html>
+
 
 
