--- a/certificates.html
+++ b/certificates.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sanjay Sharma | Certificates</title>
-    <link rel="icon" type="image/png" href="static/Logo/Logo.png" />
-    <link rel="stylesheet" href="static/style.css" />
-    <script defer src="static/script.js"></script>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='Logo/Logo.png') }}" />
+
+    <!-- Main Portfolio CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <script defer src="{{ url_for('static', filename='script.js') }}"></script>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
@@ -405,7 +407,7 @@
 <header class="navbar fade-up">
     <nav>
         <div class="logo">
-            <a href="index.html">
+            <a href="/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 100 100">
                     <polygon points="50,5 90,27.5 90,72.5 50,95 10,72.5 10,27.5"
                              fill="none"
@@ -431,11 +433,11 @@
             <span></span>
         </div>
         <div class="nav-links" id="nav-links">
-            <a href="index.html#about"><span class="nav-number">01.</span> About</a>
-            <a href="index.html#experience"><span class="nav-number">02.</span> Skills</a>
-            <a href="index.html#work"><span class="nav-number">03.</span> Project</a>
-            <a href="index.html#contact"><span class="nav-number">04.</span> Contact</a>
-            <a href="resume.html" class="resume-btn">Resume</a>
+            <a href="/#about"><span class="nav-number">01.</span> About</a>
+            <a href="/#experience"><span class="nav-number">02.</span> Skills</a>
+            <a href="/#work"><span class="nav-number">03.</span> Project</a>
+            <a href="/#contact"><span class="nav-number">04.</span> Contact</a>
+            <a href="/resume" class="resume-btn">Resume</a>
         </div>
     </nav>
 </header>
@@ -458,7 +460,7 @@
         <!-- Certificate 1: RedKross -->
         <article class="cert-card fade-up" id="redkross">
             <div class="cert-header">
-                <img src="static/Logo/Redkross-Research-Foundation-Logo.png"
+                <img src="{{ url_for('static', filename='Logo/Redkross-Research-Foundation-Logo.png') }}"
                      alt="RedKross Logo"
                      class="cert-logo">
                 <div class="cert-title-area">
@@ -481,13 +483,13 @@
 
             <div class="cert-preview">
                 <div class="cert-preview-img" onclick="openModal('redkross')">
-                    <img src=""
+                    <img src="{{ url_for('static', filename='Certificate_images/Gemini_Generated_Image_pz42gnpz42gnpz42.png') }}"
                          alt="RedKross Certificate">
                 </div>
             </div>
 
             <div class="cert-actions">
-                <a href=""
+                <a href="{{ url_for('static', filename='Certificate_images/Gemini_Generated_Image_pz42gnpz42gnpz42.png') }}"
                    class="cert-btn"
                    download>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
@@ -503,7 +505,7 @@
         <!-- Certificate 2: Function in Python -->
         <article class="cert-card fade-up" id="certificate2">
             <div class="cert-header">
-                <img src="static/Logo/Great-Learning-Logo.png"
+                <img src="{{ url_for('static', filename='Logo/Great-Learning-Logo.png') }}"
                      alt="Great Learning Logo"
                      class="cert-logo">
                 <div class="cert-title-area">
@@ -522,13 +524,13 @@
 
             <div class="cert-preview">
                 <div class="cert-preview-img" onclick="openModal('certificate2')">
-                    <img src="static/Certificate_images/Function-in-Python.jpg"
+                    <img src="{{ url_for('static', filename='Certificate_images/Function-in-Python.jpg') }}"
                          alt="Function in Python Certificate">
                 </div>
             </div>
 
             <div class="cert-actions">
-                <a href="static/Certificate_pdf/Function-in-Python.pdf"
+                <a href="{{ url_for('static', filename='Certificate_pdf/Function-in-Python.pdf') }}"
                    class="cert-btn"
                    download>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
@@ -544,7 +546,7 @@
         <!-- Certificate 3: Introduction of R -->
         <article class="cert-card fade-up" id="certificate3">
             <div class="cert-header">
-                <img src="static/Logo/Great-Learning-Logo.png"
+                <img src="{{ url_for('static', filename='Logo/Great-Learning-Logo.png') }}"
                      alt="Great Learning Logo"
                      class="cert-logo">
                 <div class="cert-title-area">
@@ -563,13 +565,13 @@
 
             <div class="cert-preview">
                 <div class="cert-preview-img" onclick="openModal('certificate3')">
-                    <img src="static/Certificate_images/Introduction-of-R.jpg"
+                    <img src="{{ url_for('static', filename='Certificate_images/Introduction-of-R.jpg') }}"
                          alt="Introduction of R Certificate">
                 </div>
             </div>
 
             <div class="cert-actions">
-                <a href="static/Certificate_pdf/Introduction-of-R.pdf"
+                <a href="{{ url_for('static', filename='Certificate_pdf/Introduction-of-R.pdf') }}"
                    class="cert-btn"
                    download>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
@@ -582,6 +584,46 @@
             </div>
         </article>
 
+        <!-- Certificate 4: Data Analytics From Deloitte -->
+        <article class="cert-card fade-up" id="certificate4">
+            <div class="cert-header">
+                <img src="{{ url_for('static', filename='Logo/Deloitte logo.jpeg') }}"
+                     alt="Deloitte Logo"
+                     class="cert-logo">
+                <div class="cert-title-area">
+                    <h3 class="cert-org">Deloitte Australia</h3>
+                    <p class="cert-name">Data Analytics Job Simulation</p>
+                </div>
+            </div>
+
+            <div class="cert-meta">
+                <div class="meta-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+                    February 2026
+                </div>
+                <span class="domain-tag">Data Analysis</span>
+            </div>
+
+            <div class="cert-preview">
+                <div class="cert-preview-img" onclick="openModal('certificate4')">
+                    <img src="{{ url_for('static', filename='Certificate_images/Deloitte Australia - Data Analytics Job Simulation.png') }}"
+                         alt="Data Analytics Job Simulation Certificate">
+                </div>
+            </div>
+
+            <div class="cert-actions">
+                <a href="{{ url_for('static', filename='Certificate_pdf/Deloitte Australia - Data Analytics Job Simulation.pdf') }}"
+                   class="cert-btn"
+                   download>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
+                    Download
+                </a>
+                <button class="cert-btn secondary" onclick="openModal('certificate3')">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 3h6v6M9 21H3v-6M21 3l-7 7M3 21l7-7"/></svg>
+                    View Full
+                </button>
+            </div>
+        </article>
     </div>
 </section>
 
