--- a/case_studies.html
+++ b/case_studies.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sanjay Sharma | Case Studies</title>
-    <link rel="icon" type="image/png" href="static/Logo/Logo.png" />
-    <link rel="stylesheet" href="static/style.css" />
-    <script defer src="static/script.js"></script>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='Logo/Logo.png') }}" />
+
+    <!-- Main Portfolio CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <script defer src="{{ url_for('static', filename='script.js') }}"></script>
 
     <style>
+        /* Override body for case study page */
         body {
             background-color: var(--navy);
             color: var(--slate);
             overflow-x: hidden;
         }
 
+        /* Main Layout */
         .case-study-wrapper {
             min-height: 100vh;
             padding-top: var(--nav-height);
@@ -29,6 +33,7 @@
             padding: 60px 50px;
         }
 
+        /* Mobile Navigation Tabs */
         .mobile-case-nav {
             display: none;
             background: var(--lightest-navy);
@@ -75,6 +80,7 @@
             background: rgba(100, 255, 218, 0.1);
         }
 
+        /* Sidebar Navigation - Desktop */
         .case-sidebar {
             position: sticky;
             top: calc(var(--nav-height) + 20px);
@@ -133,6 +139,7 @@
             color: var(--green);
         }
 
+        /* Content Area */
         .case-content {
             max-width: 900px;
         }
@@ -157,6 +164,7 @@
             }
         }
 
+        /* Card Header */
         .case-card h2 {
             color: var(--lightest-slate);
             font-size: clamp(24px, 5vw, 40px);
@@ -182,6 +190,7 @@
             font-weight: 500;
         }
 
+        /* Case Sections */
         .case-section {
             margin-bottom: 35px;
             padding-bottom: 25px;
@@ -236,6 +245,7 @@
             font-size: 20px;
         }
 
+        /* Navigation Buttons */
         .case-nav-buttons {
             display: flex;
             gap: 12px;
@@ -306,6 +316,7 @@
             width: 0;
         }
 
+        /* Back to Top Button */
         .back-to-top {
             position: fixed;
             bottom: 30px;
@@ -343,6 +354,7 @@
             transform: translateY(-2px);
         }
 
+        /* Loading Animation */
         .fade-up {
             opacity: 0;
             transform: translateY(30px);
@@ -355,6 +367,7 @@
                         transform 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
         }
 
+        /* Tablet Styles */
         @media (max-width: 1080px) {
             .case-layout {
                 padding: 50px 40px;
@@ -366,6 +379,7 @@
             }
         }
 
+        /* Mobile Styles - COMPLETELY FIXED VERSION */
         @media (max-width: 768px) {
             .case-study-wrapper {
                 padding-top: 0;
@@ -375,19 +389,22 @@
                 grid-template-columns: 1fr;
                 padding: 0;
                 gap: 0;
-                padding-top: 122px;
+                /* Add padding-top to account for BOTH fixed headers */
+                padding-top: 122px; /* Main nav (70px) + Mobile tabs (52px) */
             }
 
+            /* Hide desktop sidebar on mobile */
             .case-sidebar {
                 display: none;
             }
 
+            /* Show mobile tabs */
             .mobile-case-nav {
                 display: block;
             }
 
             .case-content {
-                padding: 30px 20px;
+                padding: 30px 20px; /* Normal padding, layout handles the top offset */
                 max-width: 100%;
             }
 
@@ -461,9 +478,10 @@
             }
         }
 
+        /* Small Mobile Styles */
         @media (max-width: 480px) {
             .case-layout {
-                padding-top: 122px;
+                padding-top: 122px; /* Same offset for smaller screens */
             }
 
             .case-content {
@@ -502,6 +520,7 @@
             }
         }
 
+        /* Touch device optimization */
         @media (hover: none) and (pointer: coarse) {
             .case-link:hover,
             .nav-btn:hover {
@@ -522,10 +541,11 @@
 
 <body>
 
+    <!-- HEADER NAV -->
     <header class="navbar fade-up">
         <nav>
             <div class="logo">
-                <a href="index.html">
+                <a href="/">
                     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 100 100">
                         <polygon points="50,5 90,27.5 90,72.5 50,95 10,72.5 10,27.5"
                                  fill="none"
@@ -551,39 +571,48 @@
                 <span></span>
             </div>
             <div class="nav-links" id="nav-links">
-                <a href="index.html"><span class="nav-number">01.</span> Home</a>
-                <a href="certificates.html"><span class="nav-number">02.</span> Achivements</a>
-                <a href="resume.html" class="resume-btn">Resume</a>
+                <a href="/#about"><span class="nav-number">01.</span> About</a>
+                <a href="/#experience"><span class="nav-number">02.</span> Skills</a>
+                <a href="/#work"><span class="nav-number">03.</span> Project</a>
+                <a href="/#contact"><span class="nav-number">04.</span> Contact</a>
+                <a href="/resume" class="resume-btn">Resume</a>
             </div>
         </nav>
     </header>
 
+    <!-- MOBILE NAVIGATION TABS -->
     <div class="mobile-case-nav" id="mobileNav">
         <div class="mobile-nav-container">
             <button class="mobile-case-tab active" data-target="spotify">Spotify</button>
             <button class="mobile-case-tab" data-target="cyber">Cyber Threat</button>
+            <button class="mobile-case-tab" data-target="vuln-scanner">Vuln Scanner</button>
             <button class="mobile-case-tab" data-target="ipl">IPL Dashboard</button>
             <button class="mobile-case-tab" data-target="movie">Movie Rec</button>
             <button class="mobile-case-tab" data-target="car">Car Price</button>
         </div>
     </div>
 
+    <!-- MAIN CONTENT -->
     <div class="case-study-wrapper">
         <div class="case-layout">
 
+            <!-- SIDEBAR NAVIGATION - Desktop Only -->
             <aside class="case-sidebar fade-up">
                 <h3>Case Studies</h3>
                 <div class="case-nav-list">
                     <div class="case-link active" data-target="spotify">Spotify Recommendation</div>
                     <div class="case-link" data-target="cyber">Cyber Threat Detection</div>
+                    <div class="case-link" data-target="vuln-scanner">AI Vulnerability Scanner</div>
                     <div class="case-link" data-target="ipl">IPL Dashboard</div>
                     <div class="case-link" data-target="movie">Movie Recommendation</div>
                     <div class="case-link" data-target="car">Car Price Prediction</div>
                 </div>
             </aside>
 
+            <!-- CONTENT AREA -->
             <main class="case-content">
 
+                <!-- SPOTIFY CASE STUDY -->
                 <div class="case-card active fade-up" id="spotify">
                     <h2>Spotify Real-Time Recommendation System</h2>
                     <div class="case-tags">
@@ -630,11 +659,12 @@
 
                     <div class="case-nav-buttons">
                         <button class="nav-btn prevBtn" disabled>← Previous</button>
-                        <a href="index.html" class="nav-btn">🏠 Home</a>
+                        <a href="/" class="nav-btn">🏠 Home</a>
                         <button class="nav-btn nextBtn">Next →</button>
                     </div>
                 </div>
 
+                <!-- CYBER THREAT CASE STUDY -->
                 <div class="case-card fade-up" id="cyber">
                     <h2>Cyber Threat Detection Suite</h2>
                     <div class="case-tags">
@@ -676,11 +706,104 @@
 
                     <div class="case-nav-buttons">
                         <button class="nav-btn prevBtn">← Previous</button>
-                        <a href="index.html" class="nav-btn">🏠 Home</a>
+                        <a href="/" class="nav-btn">🏠 Home</a>
                         <button class="nav-btn nextBtn">Next →</button>
                     </div>
                 </div>
 
+                <!-- AI WEB VULNERABILITY SCANNER CASE STUDY -->
+                <div class="case-card fade-up" id="vuln-scanner">
+                    <h2>AI Web Vulnerability Scanner</h2>
+                    <div class="case-tags">
+                        <span>Python</span>
+                        <span>AI/ML</span>
+                        <span>Security Testing</span>
+                        <span>OWASP Top 10</span>
+                        <span>Penetration Testing</span>
+                    </div>
+
+                    <div class="case-section">
+                        <strong>Overview</strong>
+                        <p>An AI-powered advanced web vulnerability scanner that automates comprehensive security testing for web applications. The system intelligently detects and reports vulnerabilities from the OWASP Top 10, including SQL injection, Cross-Site Scripting (XSS), CSRF, insecure configurations, and other critical security flaws using machine learning-based pattern recognition.</p>
+                    </div>
+
+                    <div class="case-section">
+                        <strong>Problem Statement</strong>
+                        <p>Manual security testing is time-consuming, error-prone, and difficult to scale across large web applications. Traditional vulnerability scanners often produce high false-positive rates and miss sophisticated attack vectors. This project addresses these challenges by leveraging AI to intelligently identify vulnerabilities with higher accuracy and automated comprehensive reporting.</p>
+                    </div>
+
+                    <div class="case-section">
+                        <strong>AI-Powered Detection Engine</strong>
+                        <ul>
+                            <li><strong>Machine Learning Models:</strong> Trained classification models to identify attack patterns and vulnerability signatures</li>
+                            <li><strong>Pattern Recognition:</strong> Deep learning algorithms for detecting obfuscated and sophisticated attack vectors</li>
+                            <li><strong>Intelligent Crawling:</strong> Smart web crawler that maps application structure and identifies potential injection points</li>
+                            <li><strong>Adaptive Testing:</strong> ML-driven test case generation based on application behavior analysis</li>
+                            <li><strong>False Positive Reduction:</strong> AI verification layer to minimize false alarms and validate findings</li>
+                        </ul>
+                    </div>
+
+                    <div class="case-section">
+                        <strong>Vulnerability Detection Coverage</strong>
+                        <ul>
+                            <li><strong>SQL Injection:</strong> Detects various SQLi techniques including blind, time-based, and error-based injections</li>
+                            <li><strong>Cross-Site Scripting (XSS):</strong> Identifies reflected, stored, and DOM-based XSS vulnerabilities</li>
+                            <li><strong>CSRF:</strong> Analyzes token implementation and session management weaknesses</li>
+                            <li><strong>Security Misconfigurations:</strong> Scans for exposed admin panels, default credentials, and insecure headers</li>
+                            <li><strong>Broken Authentication:</strong> Tests password policies, session fixation, and authentication bypass</li>
+                            <li><strong>Sensitive Data Exposure:</strong> Identifies unencrypted data transmission and storage issues</li>
+                        </ul>
+                    </div>
+
+                    <div class="case-section">
+                        <strong>Technical Architecture</strong>
+                        <ul>
+                            <li><strong>Web Crawler Module:</strong> Automated discovery of URLs, forms, and parameters</li>
+                            <li><strong>Payload Generator:</strong> AI-generated attack payloads tailored to application context</li>
+                            <li><strong>Response Analyzer:</strong> ML-based response classification to identify successful exploits</li>
+                            <li><strong>Reporting Engine:</strong> Comprehensive vulnerability reports with severity ratings and remediation guidance</li>
+                            <li><strong>Real-time Dashboard:</strong> Live progress tracking and vulnerability visualization</li>
+                        </ul>
+                    </div>
+
+                    <div class="case-section">
+                        <strong>Key Features</strong>
+                        <ul>
+                            <li>Automated discovery and testing of web application endpoints</li>
+                            <li>OWASP Top 10 comprehensive vulnerability coverage</li>
+                            <li>Machine learning-based attack pattern recognition</li>
+                            <li>Detailed security reports with CVSS scoring</li>
+                            <li>Remediation recommendations for each finding</li>
+                            <li>Integration-ready API for CI/CD pipelines</li>
+                            <li>Configurable scan profiles (quick, standard, deep)</li>
+                            <li>Export capabilities (PDF, JSON, XML)</li>
+                        </ul>
+                    </div>
+
+                    <div class="case-section">
+                        <strong>Impact & Results</strong>
+                        <ul>
+                            <li>Reduced manual testing time by 70% compared to traditional methods</li>
+                            <li>Achieved 85% detection accuracy with 15% false positive rate</li>
+                            <li>Successfully identified critical vulnerabilities missed by commercial scanners</li>
+                            <li>Enabled continuous security testing in DevSecOps workflows</li>
+                            <li>Improved security posture through proactive vulnerability identification</li>
+                        </ul>
+                    </div>
+
+                    <div class="case-section">
+                        <strong>Tech Stack</strong>
+                        <p>Python, Scikit-learn, TensorFlow, BeautifulSoup, Selenium, Requests, OWASP ZAP API, Flask, SQLite</p>
+                    </div>
+
+                    <div class="case-nav-buttons">
+                        <button class="nav-btn prevBtn">← Previous</button>
+                        <a href="/" class="nav-btn">🏠 Home</a>
+                        <button class="nav-btn nextBtn">Next →</button>
+                    </div>
+                </div>
+
+                <!-- IPL CASE STUDY -->
                 <div class="case-card fade-up" id="ipl">
                     <h2>IPL Data Analysis Dashboard</h2>
                     <div class="case-tags">
@@ -722,11 +845,12 @@
 
                     <div class="case-nav-buttons">
                         <button class="nav-btn prevBtn">← Previous</button>
-                        <a href="index.html" class="nav-btn">🏠 Home</a>
+                        <a href="/" class="nav-btn">🏠 Home</a>
                         <button class="nav-btn nextBtn">Next →</button>
                     </div>
                 </div>
 
+                <!-- MOVIE CASE STUDY -->
                 <div class="case-card fade-up" id="movie">
                     <h2>Movie Recommender System</h2>
                     <div class="case-tags">
@@ -768,11 +892,12 @@
 
                     <div class="case-nav-buttons">
                         <button class="nav-btn prevBtn">← Previous</button>
-                        <a href="index.html" class="nav-btn">🏠 Home</a>
+                        <a href="/" class="nav-btn">🏠 Home</a>
                         <button class="nav-btn nextBtn">Next →</button>
                     </div>
                 </div>
 
+                <!-- CAR PRICE CASE STUDY -->
                 <div class="case-card fade-up" id="car">
                     <h2>Car Price Prediction</h2>
                     <div class="case-tags">
@@ -814,7 +939,7 @@
 
                     <div class="case-nav-buttons">
                         <button class="nav-btn prevBtn">← Previous</button>
-                        <a href="index.html" class="nav-btn">🏠 Home</a>
+                        <a href="/" class="nav-btn">🏠 Home</a>
                         <button class="nav-btn nextBtn" disabled>Next →</button>
                     </div>
                 </div>
@@ -824,19 +949,22 @@
         </div>
     </div>
 
+    <!-- BACK TO TOP BUTTON -->
     <button class="back-to-top" id="backToTop" aria-label="Back to top">
         ↑
     </button>
 
     <script>
+        // Case Study Navigation
         const desktopLinks = document.querySelectorAll(".case-link");
         const mobileTabs = document.querySelectorAll(".mobile-case-tab");
         const cards = document.querySelectorAll(".case-card");
         const prevBtns = document.querySelectorAll(".prevBtn");
         const nextBtns = document.querySelectorAll(".nextBtn");
 
-        const projectIds = ['spotify', 'cyber', 'ipl', 'movie', 'car'];
+        const projectIds = ['spotify', 'cyber', 'vuln-scanner', 'ipl', 'movie', 'car'];
 
+        // Activate a project by ID
         function activate(id) {
             desktopLinks.forEach(l => l.classList.remove("active"));
             mobileTabs.forEach(t => t.classList.remove("active"));
@@ -853,6 +981,7 @@
             }
             if (card) {
                 card.classList.add("active");
+                // Always scroll to top when switching case studies
                 window.scrollTo({ top: 0, behavior: 'smooth' });
             }
 
@@ -941,6 +1070,7 @@
             window.scrollTo({ top: 0, behavior: 'smooth' });
         });
 
+        // Swipe gestures for mobile
         let touchStartX = 0;
         let touchEndX = 0;
 
@@ -968,8 +1098,9 @@
             }
         }
     </script>
-
+    <!-- ENHANCED FOOTER -->
 <footer class="fade-up">
+    <!-- Mobile Social Icons -->
     <div class="footer-social-mobile">
         <a href="https://github.com/Sanjay20057" target="_blank" aria-label="GitHub">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
@@ -981,6 +1112,8 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
         </a>
     </div>
+
+    <!-- Footer Text with GitHub Link -->
     <a href="https://github.com/Sanjay20057/Portfolio" target="_blank" rel="noopener noreferrer" class="footer-link">
         <p>Designed & Built by Sanjay Sharma</p>
     </a>
@@ -988,4 +1121,3 @@
 
 </body>
 </html>
-
