--- a/case_studies.html
+++ b/case_studies.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sanjay Sharma | Case Studies</title>
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='Logo/Logo.png') }}" />
-
-    <!-- Main Portfolio CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-    <script defer src="{{ url_for('static', filename='script.js') }}"></script>
+    <link rel="icon" type="image/png" href="static/Logo/Logo.png" />
+    <link rel="stylesheet" href="static/style.css" />
+    <script defer src="static/script.js"></script>
 
     <style>
         /* Override body for case study page */
@@ -1121,3 +1119,4 @@
 
 </body>
 </html>
+
