--- a/case_studies.html
+++ b/case_studies.html
@@ -543,7 +543,7 @@
     <header class="navbar fade-up">
         <nav>
             <div class="logo">
-                <a href="/">
+                <a href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 100 100">
                         <polygon points="50,5 90,27.5 90,72.5 50,95 10,72.5 10,27.5"
                                  fill="none"
@@ -1119,5 +1119,6 @@
 
 </body>
 </html>
+
 
 
