--- a/resume.html
+++ b/resume.html
@@ -363,7 +363,7 @@
         </svg>
     </button>
     <div class="resume-modal-content" onclick="event.stopPropagation()">
-        <img id="modalResumeImage" src="static/Resume_Image/Sanjay_Resume_image.jpg" alt="Sanjay Sharma Resume - Full View">
+        <img id="modalResumeImage" src="static/Resume_Image/Sanjay_Resume_image.png" alt="Sanjay Sharma Resume - Full View">
     </div>
 </div>
 
@@ -469,6 +469,7 @@ console.log('Resume page loaded successfully');
 
 </body>
 </html>
+
 
 
 
