--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sanjay Sharma | Resume</title>
+    <title>Resume | Sanjay Sharma</title>
     <link rel="icon" type="image/png" href="static/Logo/Logo.png" />
     <link rel="stylesheet" href="static/style.css" />
     <script defer src="static/script.js"></script>
@@ -469,6 +469,7 @@ console.log('Resume page loaded successfully');
 
 </body>
 </html>
+
 
 
 
